# PixelLab

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  run_localfarmer.py
app/: __init__.py  config.py  main.py  models.py
app/engine/: __init__.py  dialogue_system.py  event_system.py  game_engine.py  lifestyle_engine.py  market_engine.py  social_engine.py  task_system.py  time_system.py  world_state.py
app/services/: activity_logger.py  brave_service.py  event_mapper.py  openai_dialogue_service.py  public_hotspot_service.py
app/storage/: db.py  repository.py
docs/: architecture_report.md  big_government_mode_guide.md  casino_emergence_report.md  casino_system_guide.md  consumption_real_estate_design.md  emergent_behavior_casebook.md  full_system_evolution_report.md  llm_prompt_tuning_retrospective.md  long_run_system_retrospective_1685d.md  market_casino_social_emergence_report.md  recent_100day_emergence_report.md  recent_100day_government_emergence_report.md  simulation_day312_academic_analysis.md  simulation_day312_review.md  spatial_behavior_and_institution_report.md  system_development_retrospective.md  undergrad_system_explainer.md
scripts/: pixellab-daemon.sh  pixellab-service.sh  pixellab.sh
static/: app.js  index.html  styles.css
static/assets/: ATTRIBUTION.md
